<resources>
    <string name="app_name">Firebase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_firebase">Login Firebase</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_firebase">Register Firebase</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="upload">Upload</string>
    <string name="nama_file">Nama File</string>
    <string name="default_web_client_id">webid</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="save">SAVE</string>
</resources>