<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registerFirebase"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/register_firebase">
    </TextView>

    <EditText
        android:layout_below="@id/registerFirebase"
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#fff"
        android:drawablePadding="20dp"
        android:hint="@string/masukkan_username"
        android:inputType="textEmailAddress">
    </EditText>

    <View
        android:layout_below="@id/Username"
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="0.5dp">
    </View>

    <EditText
        android:layout_below="@+id/Username"
        android:id="@+id/Password"
        android:background="#fff"
        android:drawablePadding="20dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/masukkan_password"
        android:inputType="textVisiblePassword">
    </EditText>

    <com.google.android.gms.common.SignInButton
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">
    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_below="@id/btn_google"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/register"
        android:textAllCaps="false">
    </Button>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_below="@id/btn_register"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textAllCaps="false">
    </Button>

</RelativeLayout>